Fix comic heading margin on small screens

--- a/_sass/maxima/_layout.scss
+++ b/_sass/maxima/_layout.scss
@@ -311,7 +311,7 @@
 .comic-image {
   background-size: 100%;
   width: 150%;
-  margin-top: -2rem;
+  margin-top: -1rem;
   margin-bottom: -1rem;
   margin-left: -25%;
 
